--- a/MANIFEST.in
+++ b/MANIFEST.in
@@ -2,4 +2,4 @@ recursive-include *.py
 include setup.cfg
 include README.md CHANGELOG.md LICENSE.md
 include *.txt
-recursive-include iota-cli/templates *
+recursive-include IotaCli/templates *
